plugins {
    id 'java'
    id 'org.owasp.dependencycheck' version '7.4.4'
    id 'org.springframework.boot' version '3.1.1'
    id 'io.spring.dependency-management' version '1.1.0'
}

group 'uk.nhs.prm'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2022.0.3")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-integration'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.cloud:spring-cloud-starter'
    implementation 'org.springframework.integration:spring-integration-jpa'
    implementation platform('software.amazon.awssdk:bom:2.18.41')
    implementation 'software.amazon.awssdk:ssm'
    implementation 'software.amazon.awssdk:sqs'
    implementation 'software.amazon.awssdk:sts'
    implementation 'software.amazon.awssdk:cloudwatch'
    implementation 'software.amazon.awssdk:cloudwatchlogs'
    implementation 'software.amazon.awssdk:dynamodb'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'org.apache.activemq:activemq-broker:5.16.4'
    implementation 'org.apache.activemq:activemq-client:5.16.4'
    implementation 'org.apache.activemq:activemq-pool:5.16.4'
    implementation 'org.awaitility:awaitility:4.2.0'
    implementation 'org.jfree:jfreechart:1.5.0'
    implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    implementation 'org.json:json:20230618'
    implementation 'com.swiftmq:swiftmq-client:12.5.4'
    implementation 'org.xmlunit:xmlunit-core:2.9.1'
    implementation 'org.xmlunit:xmlunit-matchers:2.9.1'

    compileOnly 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok'

    runtimeOnly 'org.postgresql:postgresql'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.integration:spring-integration-test'
    testImplementation 'org.xmlunit:xmlunit-core:2.9.1'
    testImplementation 'org.xmlunit:xmlunit-matchers:2.9.1'
    testImplementation 'com.swiftmq:swiftmq-client:12.5.4'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

test {
    testLogging.showStandardStreams = true
    systemProperty "javax.xml.parsers.SAXParserFactory", "com.sun.org.apache.xerces.internal.jaxp.SAXParserFactoryImpl"
}

configurations {
    groovyScript
}

dependencies {
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    groovyScript localGroovy()
}

tasks.register('ehrTool', JavaExec) {
    classpath = configurations.groovyScript
    mainClass = 'groovy.ui.GroovyMain'
    args 'src/main/groovy/ehr-tool.groovy'
}

test.outputs.upToDateWhen { false }

dependencyCheck {
    failBuildOnCVSS = 7
    suppressionFile = './dependency-checks-suppression.xml'
}
